# L2TP

./: .gitignore  CMakeClean.sh  CMakeLists.txt
parse/: lex.l  parse.y
res/B.real/: 2
runner/: CMakeLists.txt  T2LP.cpp
src/: CMakeLists.txt  Cabalar.cpp  Cabalar.h  HengZhang.cpp  HengZhang.h  circ2sm.cpp  circ2sm.h  lex.cpp  parse.cpp  parse.h  prenex.cpp  prenex.h  rule.cpp  rule.h  struct.cpp  struct.h  utility.cpp  utility.h
tests/: CMakeLists.txt
tests/0.sample/: sample.cpp
tests/2.parse/: 1.atom.0.single.cpp  1.atom.1.clause.cpp  1.atom.2.vari.1.cpp  1.atom.2.vari.2.cpp  1.atom.3.func.1.single.cpp  1.atom.3.func.2.clause.cpp  1.atom.3.func.3.vari.cpp  1.atom.3.func.4.double.cpp  1.atom.4.cascade.cpp  2.nega.0.single.cpp  2.nega.1.double.cpp  2.nega.2.trible.cpp  2.nega.3.clause-double.cpp  2.nega.4.clause-trible.cpp  3.conj.0.single.cpp  3.conj.1.cascade.cpp  3.conj.2.line.cpp  4.disj.0.single.cpp  4.disj.1.cascade.cpp  4.disj.2.line.cpp  5.impl.0.single.cpp  5.impl.1.cascade.cpp  5.impl.2.line.cpp  6.univ.0.single.cpp  6.univ.1.cascade.cpp  7.exis.0.single.cpp  7.exis.1.cascade.cpp  7.exis.2.mix.behind.cpp  7.exis.2.mix.front.cpp
tests/5.cabalar/: A.cabalar.0.normal.l1.cpp  A.cabalar.0.normal.l2.cpp  A.cabalar.0.normal.l3.cpp  A.cabalar.0.normal.l4.cpp  A.cabalar.0.normal.l5.cpp  A.cabalar.0.normal.r1.cpp  A.cabalar.0.normal.r2.cpp  A.cabalar.0.normal.r3.cpp  A.cabalar.0.normal.r4.cpp  A.cabalar.0.normal.r5.cpp
