PROJECT (PARSER)
CMAKE_MINIMUM_REQUIRED (VERSION 2.6.0)

INCLUDE(CTest)

SET (ROOT_PATH ${PARSER_SOURCE_DIR})
SET (EXECUTABLE_OUTPUT_PATH "${ROOT_PATH}/bin/linux")
SET (LIBRARY_OUTPUT_PATH "${ROOT_PATH}/lib")
MESSAGE (STATUS "ROOT PATH IS ${ROOT_PATH}")
MESSAGE (STATUS "BIN PATH IS ${EXECUTABLE_OUTPUT_PATH}")
MESSAGE (STATUS "LIB PATH IS ${LIBRARY_OUTPUT_PATH}")

INCLUDE_DIRECTORIES (${ROOT_PATH}/src)
INCLUDE_DIRECTORIES (${ROOT_PATH}/include)
LINK_DIRECTORIES (${LIBRARY_OUTPUT_PATH})


ADD_SUBDIRECTORY (src)
ADD_SUBDIRECTORY (runner)
ADD_SUBDIRECTORY (tests)